--- a/src/app/main-conten/main-content/main-content.component.html
+++ b/src/app/main-conten/main-content/main-content.component.html
@@ -2,7 +2,7 @@
 <app-about></app-about>
 <app-skills></app-skills>
 
-<section>
+<section class="projects-section">
   <h2  id="projects" [innerHTML]="safeMyProjects"></h2>
   <app-projects
     [projectsEn]="projectsEn"
