--- a/src/app/main-conten/main-content/main-content.component.scss
+++ b/src/app/main-conten/main-content/main-content.component.scss
@@ -10,6 +10,20 @@
     margin-bottom: 3.125rem;
 }
 
+.projects-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.projects-section > h2,
+.projects-section > app-projects {
+    width: 100%;
+    max-width: $max-width;
+}
+
 h2{
     @include fonts();
     margin-bottom: 1.5rem;
