--- a/src/app/main-conten/projects/projects.component.scss
+++ b/src/app/main-conten/projects/projects.component.scss
@@ -5,18 +5,42 @@
   box-sizing: border-box;
 }
 .project-container {
-  @include flex-center($jc: space-between, $ai:flex-start);
+  @include flex-center($jc: space-between, $ai:stretch);
   gap: $gap-24;
-  width: auto;
+  width: 100%;
   height: auto;
   max-width: $max-width;
-  margin-bottom: 10rem;
+  margin: 0 auto 10rem;
   overflow-x: hidden;
 
 }
   .project-container:nth-child(2n) {
     flex-direction: row-reverse;
   }
+  .project-container:nth-child(2n) .text-container-project {
+    align-items: flex-end;
+    text-align: right;
+  }
+  .project-container:nth-child(2n) .links {
+    justify-content: flex-end;
+  }
+  .project-container:nth-child(2n+1) .text-container-project {
+    align-items: flex-start;
+    text-align: left;
+  }
+  .project-container:nth-child(2n+1) .links {
+    justify-content: flex-start;
+  }
+.project-container.force-left {
+  flex-direction: row-reverse;
+}
+.project-container.force-left .text-container-project {
+  align-items: flex-start;
+  text-align: left;
+}
+.project-container.force-left .links {
+  justify-content: flex-start;
+}
 .image-container {
   position: relative;
   width: auto; 
@@ -30,8 +54,24 @@
   height: auto; 
 }
 
+.project-container > .image-container,
+.project-container > .text-container-project {
+  flex: 1 1 0;
+  min-width: 0;
+}
+
+.project-container > .image-container {
+  width: 100%;
+  max-width: none;
+}
+
 .text-container-project {
-  width: 50%; 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  align-self: stretch;
+  justify-content: space-between;
 }
 
 
@@ -48,6 +88,7 @@ h5{
 
 .links {
   @include flex-center($jc: flex-start); 
+  margin-top: auto;
 
   a {
     @include fonts($fc:$turquoise,$fs:$f-s-18);
