Update contact details and arrow behavior

--- a/src/app/main-conten/contact/contact.component.html
+++ b/src/app/main-conten/contact/contact.component.html
@@ -75,13 +75,13 @@
   <div class="form-right fade-in-right"appScrollAnimation>
     <div class="mail-tel display-none">
       <div>
-        <a href="mailto:geissq@gmail.com">
+        <a href="mailto:felix.geiss93@gmail.com">
           <div class="letter"></div>
-          <span>E-mail: geissq&#64;gmail.com</span>
+          <span>E-mail: felix.geiss93&#64;gmail.com</span>
         </a>
-        <a href="tel:015222492773">
+        <a href="tel:071139016947">
           <div class="phone"></div>
-          <span>Tel: 0152 224 927 73</span>
+          <span>Tel: 071139016947</span>
         </a>
       </div>
       <div class="arrow-container">
@@ -123,6 +123,8 @@
   <label class="privacy">
     <input
       type="checkbox"
+      id="privacyConsent"
+      name="privacyConsent"
       [checked]="isChecked"
       (change)="isCheckt($event)"
     />
@@ -143,15 +145,15 @@
   <div class="mail-tel-mobile show">
     <div>
       <div>
-        <a href="mailto:geissq@gmail.com">
+        <a href="mailto:felix.geiss93@gmail.com">
           <div class="letter"></div>
-          <span>E-mail: geissq&#64;gmail.com</span>
+          <span>E-mail: felix.geiss93&#64;gmail.com</span>
         </a>
       </div>
       <div>
-        <a href="tel:015222492773">
+        <a href="tel:071139016947">
           <div class="phone"></div>
-          <span>Tel: 0152 224 927 73</span>
+          <span>Tel: 071139016947</span>
         </a>
       </div>
     </div>
