--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -27,7 +27,7 @@
     >
       <div class="git-hup"></div>
     </a>
-    <a href="mailto:geissq@gmail.com" target="_blank" rel="noopener noreferrer">
+    <a href="mailto:felix.geiss93@gmail.com" target="_blank" rel="noopener noreferrer">
       <div class="email"></div>
     </a>
     <a
