--- a/src/app/main-conten/contact/contact.component.scss
+++ b/src/app/main-conten/contact/contact.component.scss
@@ -180,6 +180,8 @@ form {
       border: 2px solid $primary-red;
       border-radius: 3px;
       cursor: pointer;
+      display: grid;
+      place-items: center;
 
       &:hover {
         background: $turquoise;
@@ -192,13 +194,13 @@ form {
         &::after {
           content: "";
           position: absolute;
-          top: 0px;
-          left: 3px;
-          width: 3px;
-          height: 6px;
+          top: 50%;
+          left: 50%;
+          width: 4px;
+          height: 8px;
           border: solid $primary-red;
           border-width: 0 2px 2px 0;
-          transform: rotate(45deg);
+          transform: translate(-50%, -60%) rotate(45deg);
         }
       }
     }
@@ -238,6 +240,7 @@ form {
   transform: rotate(0deg);
   transition: all 125ms ease-out;
   border: 0.0625rem solid transparent;
+  display: inline-block;
 
   &:hover {
     border-color: $turquoise;
@@ -245,6 +248,10 @@ form {
     background-size: contain;
     background-origin: content-box;
   }
+}
+
+.arrow-container.show {
+  display: none;
 }
 
 .mail-tel-mobile {
@@ -323,6 +330,9 @@ textarea.error::placeholder {
   h2 {
     white-space: normal !important;
     text-align: center !important;
+  }
+  .arrow-container.show {
+    display: flex;
   }
 }
 
